--- a/README
+++ b/README
@@ -8,7 +8,7 @@
 :Tags: exif, photo
 
 
-Exif editor.
+Simple exif editor.
 
 
 Disclaimer
@@ -27,9 +27,10 @@ Just unpack and run via exifeditor.py
 
 Runtime Requirements
 --------------------
-* Python 2.6+
-* exifread (https://pypi.python.org/pypi/ExifRead/)
 
+* Python 2.6+
+* PyQT 4
+* gexiv2 https://wiki.gnome.org/Projects/gexiv2
 
 Licence
 =======
